--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: GraphViz-DBI-FromSchema
-version: 0.01
+version: 0.02
 author:
   - 'Smylers <smylers@cpan.org>'
 abstract: |-
@@ -8,11 +8,11 @@ abstract: |-
   foreign key information in the schema
 license: perl
 requires:
-  GraphViz/DBI: 0
+  GraphViz::DBI: 0
 build_requires:
   Test::More: 0
 provides:
   GraphViz::DBI::FromSchema:
     file: lib/GraphViz/DBI/FromSchema.pm
-    version: 0.01
+    version: 0.02
 generated_by: Module::Build version 0.26
